--- a/index.html
+++ b/index.html
@@ -9,49 +9,52 @@
 </head>
 <body>
     <div class="header">
-        <div>Header Logo</div>
+        <div class="logo">Header Logo</div>
 
         <ul class="right-links">
-            <li><a href="#">Link One</a></li>
-            <li><a href="#">Link Two</a></li>
-            <li><a href="#">Link Three</a></li>
+            <li><a href="#">header link one</a></li>
+            <li><a href="#">header link two</a></li>
+            <li><a href="#">header link three</a></li>
         </ul>
 
     </div>
 
     <div class="hero-section">
+
+
         <div class="hero-container">
             <div class="hero-text"> This website is awesome</div>
             <div class="hero-subtext"> This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast.</div>
             <button class="sign-up hero">Sign up</button>
         </div>
 
-        <div class="hero-image">this is a placeholder for an image</div>
+        <div class="hero-image">placeholder for an image</div>
+
 
     </div>
 
     <div class="cards-section">
         <div class="cards-title">Some random information</div>
 
-        <div class="cards">
-            <div>
-                <div></div>
-                <div>this is some subtext under an illustration or image</div>
+        <div class="cards-container">
+            <div class="card">
+                <div class="img-bx"></div>
+                <div class="info-sub">this is some subtext under an illustration or image</div>
             </div>
 
-            <div>
-                <div></div>
-                <div>this is some subtext under an illustration or image</div>
+            <div class="card">
+                <div class="img-bx"></div>
+                <div class="info-sub">this is some subtext under an illustration or image</div>
             </div>
 
-            <div>
-                <div></div>
-                <div>this is some subtext under an illustration or image</div>
+            <div class="card">
+                <div class="img-bx"></div>
+                <div class="info-sub">this is some subtext under an illustration or image</div>
             </div>
 
-            <div>
-                <div></div>
-                <div>this is some subtext under an illustration or image</div>
+            <div class="card">
+                <div class="img-bx"></div>
+                <div class="info-sub">this is some subtext under an illustration or image</div>
             </div>
         </div>
     </div>
@@ -60,7 +63,7 @@
 
         <div class="quote-container">
             <div class="quote">This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that is looks nice.</div>
-            <div class="credit">-Someone Somebody</div>
+            <div class="author">-Someone, Somebody</div>
         </div>
 
     </div>
